--- a/guess-number-game/index.html
+++ b/guess-number-game/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
-	<head></head>
+	<head>
+		<meta charset="utf-8">
+		<title>Number guessing game</title>
+		<link rel="stylesheet" href="style.css">
+		<script src="script.js" defer></script>
+	</head>
 	<body></body>
 </html>
